--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,5 +2,6 @@
     <h1 class="project-name">OpenSolvers</h1>
     <h2 class="project-tagline">Running open solvers as a service</h2>
     
+    <a href="https://github.com/opensolvers/opensolvers.github.io" class="btn">Find us on GitHub</a>
     
 </header>
